<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/kanit_extralight"
        android:text="@string/dev_credit"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/inYear"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:text="@string/appName"
        android:fontFamily="@font/baloo_tamma"
        android:lineSpacingExtra="-60dp"
        android:textColor="@color/colorBlacklightgreen"
        android:textSize="60sp" />

    <EditText
        android:id="@+id/inYear"
        android:layout_width="220dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:ems="10"
        android:fontFamily="@font/kanit"
        android:hint="@string/year"
        android:background="@drawable/edittext_white"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="@color/colorAccentLight"
        android:textSize="50sp" />

    <Button
        android:id="@+id/btnCheck"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_below="@id/inYear"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_gradient_one"
        android:fontFamily="@font/kanit_semibold_italic"
        android:text="@string/check"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/easter_egg_zero"
        android:layout_below="@id/btnCheck"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

</RelativeLayout>